--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "city-coop-platform",
-  "version": "2.2.1",
+  "version": "2.2.3",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -15,9 +15,11 @@
     "@anthropic-ai/sdk": "^0.72.1",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-switch": "^1.2.6",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.94.0",
     "@tanstack/react-query": "^5.90.20",
