--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "city-coop-platform",
-  "version": "2.9.0",
+  "version": "2.10.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "supabase:link": "supabase link --project-ref vrjbtrvrkmmmpncaluaj",
+    "supabase:gen-types": "supabase gen types typescript --project-id vrjbtrvrkmmmpncaluaj > src/types/database.types.ts",
+    "supabase:status": "supabase status"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^3.0.36",
@@ -57,6 +60,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
+    "supabase": "^2.76.9",
     "tailwindcss": "^4",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.4.0",
