--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.94.0",
     "@tanstack/react-query": "^5.90.20",
+    "@types/canvas-confetti": "^1.9.0",
     "ai": "^6.0.69",
+    "canvas-confetti": "^1.9.4",
     "cheerio": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
